@@ -89,7 +89,6 @@
                 </dependencies>
                 <configuration>
                     <argLine>
-                        --illegal-access=warn
                         --add-opens blue.base.core/test.base.core.model=fastjson,ALL-UNNAMED
                     </argLine>
                 </configuration>
